Attempted usage of word break to avoid overlapping with price by night

--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -22,6 +22,7 @@
 .places h2 {
     font-size: 30px;
     text-align: center;
+    overflow-wrap: break-word;
 }
 
 .price_by_night {
